# GreenLane

./: .gitignore  ARCHITECTURE.md  BUILD_COMPLETE.md  CHECKLIST.md  GETTING_STARTED.md  Makefile  PROJECT_SUMMARY.md  README.md  SETUP.md  TESTING.md  quickstart.sh
cli/: go.mod  go.sum  main.go
cli/proto/: fleet_grpc.pb.go
deploy/: docker-compose.yml  init-db.sql
proto/: fleet.proto
scripts/: generate-proto.sh  run-simulator.sh
services/ingestion/: go.mod  go.sum  main.go
services/ingestion/proto/: fleet.pb.go
services/mock-grid/: go.mod  main.go
services/pricing-worker/: Cargo.toml
services/pricing-worker/src/: main.rs
simulator/: fleet_pb2.py  fleet_pb2_grpc.py  generate_proto.sh  simulator.py
